--- a/LogRegression.ipynb
+++ b/LogRegression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsfacC18l79lc5muKwa/9e",
+      "authorship_tag": "ABX9TyMxRyYqG4E013zR3yat3suP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3564,7 +3564,61 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "TQbsExdseoQP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TQbsExdseoQP",
+        "outputId": "8ed64069-0460-45cd-d431-3bb702de09e2"
+      },
+      "execution_count": 200,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy is - 72.27443609022556\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score\n",
+        "print(\"accuracy is \", (accuracy_score(y_pred, y_test)*1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jd1gG-W-gXZZ",
+        "outputId": "fb2e5e15-5b90-4e01-a3d2-1554af97f96b"
+      },
+      "execution_count": 201,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "accuracy is  0.7227443609022557\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BaNtJ--zgXM1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "e-lp2hkjgXDm"
       },
       "execution_count": null,
       "outputs": []
